# liz

./: .gitignore  Cargo.toml  PROVIDER_SUPPORT.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
apps/liz-web/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vitest.config.ts
apps/liz-web/e2e/: shell.spec.ts
apps/liz-web/src/: App.tsx  preferences.ts  styles.css
apps/liz-web/src/hooks/: useLizRuntime.ts
apps/liz-web/src/protocol/: client.ts  types.ts
apps/liz-web/src/state/: workbench.ts
apps/liz-web/tests/: app-surface.test.tsx  preferences.test.ts  protocol-client.test.ts  workbench.test.ts
crates/liz-app-server/: Cargo.toml
crates/liz-app-server/src/: config.rs  lib.rs  main.rs
crates/liz-app-server/src/channels/: mod.rs  telegram.rs
crates/liz-app-server/src/events/: mod.rs
crates/liz-app-server/src/executor/: mod.rs  sandbox.rs  shell.rs  workspace.rs
crates/liz-app-server/src/handlers/: mod.rs
crates/liz-app-server/src/model/: auth.rs  capabilities.rs  config.rs  family.rs  gateway.rs  http.rs  invocation.rs  mod.rs  normalized_stream.rs  output_budget.rs  prompt_cache.rs  provider_spec.rs  registry.rs  tooling.rs
crates/liz-app-server/src/model/adapters/: anthropic.rs  bedrock.rs  google.rs  local_gateway.rs  mod.rs  openai.rs  openai_compatible.rs  openai_style.rs
crates/liz-app-server/src/runtime/: context_assembler.rs  coordinator.rs  error.rs  ids.rs  inbound.rs  memory.rs  mod.rs  node_registry.rs  output_policy.rs  policy_engine.rs  stores.rs  thread_manager.rs  turn_manager.rs
crates/liz-app-server/src/server/: mod.rs  websocket.rs
crates/liz-app-server/src/storage/: artifact_store.rs  auth_profile_store.rs  checkpoint_store.rs  error.rs  fs.rs  global_memory_store.rs  mod.rs  node_registry_store.rs  paths.rs  thread_store.rs  turn_log.rs
crates/liz-app-server/tests/: codex_auth_login.rs  context_policy.rs  filesystem_storage.rs  foreground_memory.rs  github_copilot_device_code.rs  gitlab_auth_login.rs  memory_request_events.rs  minimax_auth_login.rs  model_streaming.rs  provider_auth_profiles.rs  provider_live_http.rs  provider_registry.rs  provider_tool_matrix.rs  provider_tool_shapes.rs  runtime_lifecycle.rs  server_smoke.rs  telegram_channel.rs  tool_workspace.rs  websocket_event_stream.rs
crates/liz-cli/: Cargo.toml
crates/liz-cli/src/: app_client.rs  lib.rs  main.rs  renderers.rs  settings.rs  tui.rs  view_model.rs
crates/liz-cli/tests/: app_client_websocket.rs  cli_smoke.rs  view_model_events.rs
crates/liz-protocol/: Cargo.toml
crates/liz-protocol/src/: approval.rs  artifact.rs  auth.rs  checkpoint.rs  events.rs  ids.rs  interaction.rs  lib.rs  memory.rs  memory_surface.rs  node.rs  primitives.rs  requests.rs  responses.rs  sandbox.rs  thread.rs  tool.rs  transport.rs  turn.rs
crates/liz-protocol/tests/: core_types.rs  messages.rs
