[package]
name = "liz-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
liz-protocol = { path = "../liz-protocol" }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
yup-oauth2 = { version = "12.1.0", default-features = false, features = ["hyper-rustls", "ring", "service_account"] }

[dev-dependencies]
tempfile.workspace = true
