[package]
name = "liz-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
liz-protocol = { path = "../liz-protocol" }
serde_json.workspace = true
tungstenite = "0.24.0"

[dev-dependencies]
liz-app-server = { path = "../liz-app-server" }
tempfile.workspace = true
