[package]
name = "liz-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
crossterm = "0.28.1"
liz-protocol = { path = "../liz-protocol" }
ratatui = "0.29.0"
serde.workspace = true
serde_json.workspace = true
tungstenite = "0.24.0"

[dev-dependencies]
liz-app-server = { path = "../liz-app-server" }
tempfile.workspace = true
